030-software/fluxcd/apps/omniroute/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: omniroute
spec:
  selector:
    app: omniroute
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
