030-software/fluxcd/apps/omniroute/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omniroute
  annotations:
    dashboard.${domain}/icon: robot
    dashboard.${domain}/name: omniroute
    dashboard.${domain}/url: https://omniroute.${domain}
spec:
  hostnames:
  - omniroute.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: omniroute
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
